wrong fix for wrapping

--- a/multitool/d3v4-selectable-zoomable-force-directed-graph-v3.css
+++ b/multitool/d3v4-selectable-zoomable-force-directed-graph-v3.css
@@ -62,10 +62,6 @@ body {
   font-weight: bold;
 }
 
-.dontwrap {
-	display:inline;
-}
-
 .hidden {
     display: none;
 }
